# docs.open223.info

./: .buildinfo  .gitignore  CNAME  Makefile  _config.yml  _toc.yml  _toc.yml.orig  brick-rec.json  build_examples.sh  closed-world-assumption.json  config.json  definitions.json  design-patterns.json  genindex.html  graph-structure.json  heat-transfer-equipment.json  index.html  index.json  intro.html  intro.md  medium-mixtures.json  model-creation-buildingmotif.json  model-exploration.json  model-inference.json  myst.search.json  myst.xref.json  myst.yml  objects.inv  open223-resources.json  other-resources.json  overview.json  purpose-scope.json  pyproject.toml  qudt.json  related-standards.json  requirements.txt  scraps.html  scraps.md  search.html  searchindex.js  (+2 more)
_sources/: intro.md  scraps.md
_static/: 223p.ttl  G36-4-1-pyvis.html
brick-rec/: index.html
closed-world-assumption/: index.html
definitions/: index.html
design-patterns/: index.html
examples/: G36-4-1.html  G36-4-2.html  G36-dual-duct-terminal-unit-with-discharge-sensor.md  G36-dual-duct-terminal-unit-with-inlet-sensors.md  G36-multiple-zone-ahu.md  G36-parallel-fpu-constant-volume-fan.md  G36-parallel-fpu-variable-volume-fan.md  G36-vav-cooling-only.md  G36-vav-reheat.md  NREL-example.md  lbnl-example.html  lbnl-example.md  model.html  model.md
explanation/: 223-introduction.html  223-introduction.md  223-overview.html  223-overview.md  223_overview.html  223_overview.md  223p.html  223p.md  RDF.md  SPARQL.md  closed_world.html  closed_world.md  closed_world_assumption.html  concepts.html  (+27 more)
(+137 files in other folders)
