[project]
name = "docs-open223-info"
version = "0.1.0"
description = "Docs for open23"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter-book>=1.0.4.post1",
    "pyshacl>=0.30.1",
    "rdflib>=7.1.3",
    "sphinxcontrib-mermaid>=1.0.0",
]
[project]
name = "open223-book"
version = "0.1.0"
description = "Jupyter Book for Open223"
requires-python = ">=3.9"
dependencies = [
    "jupyter-book",
    "myst_parser",
    "pyshacl",
    "rdflib",
    "sphinxcontrib-mermaid",
    "ipykernel",
]
