[project]
name = "open223-book"
version = "0.1.0"
description = "Jupyter Book for Open223"
requires-python = ">=3.11"
dependencies = [
    "jupyter-book>=2",
    "myst_parser",
    "pyshacl",
    "rdflib",
    "sphinxcontrib-mermaid",
    "ipykernel",
    "buildingmotif",
]

[tool.uv.sources]
buildingmotif = { git = "https://github.com/NREL/buildingmotif.git", rev = "develop" }
